# discord-faucet

./: .gitignore  Cargo.toml  Dockerfile  FullBuild.Dockerfile  LICENSE  README.md  cross-shell.nix  flake.nix  justfile
.cargo/: audit.toml
.github/workflows/: audit.yml  build.yml  build_static.yml  cross-compile.yml  lint.yml  update_nix.yml
scripts/: build-docker-images  build-docker-images-native
src/: api.toml  discord.rs  faucet.rs  lib.rs  main.rs  web.rs
